[gd_scene load_steps=4 format=3 uid="uid://cf6rph7p0k8y7"]

[ext_resource type="Theme" uid="uid://fhpp2immpt73" path="res://resources/theme.tres" id="1_vfvld"]
[ext_resource type="PackedScene" uid="uid://mqdvfqgo4wwf" path="res://scenes/ui/common/nine_patch_rect.tscn" id="2_6jlxp"]
[ext_resource type="Script" uid="uid://wwg6w3elyw1c" path="res://scripts/ui/overlays/heads_up_display.gd" id="2_r0aol"]

[node name="HeadsUpDisplay" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_vfvld")
script = ExtResource("2_r0aol")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Top" type="HBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.1

[node name="Panel" type="Panel" parent="VBoxContainer/Top"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Separator" type="Control" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5

[node name="PlayerAnchor" type="Control" parent="VBoxContainer/Separator"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
grow_vertical = 2

[node name="PlayerPosition" type="Marker2D" parent="VBoxContainer/Separator/PlayerAnchor"]
unique_name_in_owner = true
position = Vector2(85, 40)

[node name="EnemyAnchor" type="Control" parent="VBoxContainer/Separator"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
grow_horizontal = 0
grow_vertical = 2

[node name="EnemyPosition" type="Marker2D" parent="VBoxContainer/Separator/EnemyAnchor"]
unique_name_in_owner = true
position = Vector2(-85, 40)

[node name="Bottom" type="HBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.4

[node name="ItemsContainer" parent="VBoxContainer/Bottom" instance=ExtResource("2_6jlxp")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.3

[node name="QuestionsContainer" parent="VBoxContainer/Bottom" instance=ExtResource("2_6jlxp")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.7
